--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
-    "@react-native-firebase/storage": "^14.11.0",
+    "@react-native-firebase/firestore": "^14.11.0",
     "axios": "^0.27.2",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-camera": "^4.2.1",
     "react-native-permissions": "^3.3.1",
-    "react-native-qrcode-scanner": "^1.5.5"
+    "react-native-vector-icons": "^9.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
