--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'comoTask' do
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'comoTaskTests' do
     inherit! :complete
     # Pods for testing
